--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,7 @@ repositories {
 
 dependencies {
     implementation group: 'io.netty', name: 'netty-all', version: '4.1.59.Final'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation("com.google.guava:guava:30.1-jre")
 }
