--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation("com.google.guava:guava:30.1-jre")
+    compile 'com.flowpowered:flow-nbt:1.0.1-SNAPSHOT'
 }
