--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ group 'net.servzero'
 version '1.0-SNAPSHOT'
 
 repositories {
+    maven { url "https://oss.sonatype.org/content/groups/public/" }
     mavenCentral()
 }
 
