--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,19 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'io.netty', name: 'netty-all', version: '4.1.59.Final'
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    implementation("com.google.guava:guava:30.1-jre")
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.59.Final'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile 'com.google.guava:guava:30.1-jre'
     compile 'com.flowpowered:flow-nbt:1.0.1-SNAPSHOT'
+}
+
+jar {
+    baseName 'ServZero'
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    manifest {
+        attributes("Main-Class": "net.servzero.Main")
+    }
 }
